changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Fix some integer overflows in experience calculations.
  common/exp.c
  common/living.c
  include/libproto.h
  include/sproto.h
  server/attack.c
  server/skill_util.c
Andreas Kirschbaum, 2008-03-08

Fix i18n bug resulting in erroneous output for 'statistics' command.
 include/languages.h
Kevin Bulgrien, 2008-03-02

Generate a global list of monsters in maps, and list monsters on each map.
 utils/templates/map.template
 utils/mapper.c
Added files:
 utils/templates/map_monster_after.template map_monster_before.template
 map_monster_between.template map_no_monster.template map_monster_one.template
Nicolas Weeger, 2008-02-23

Generate a list of special equipment in maps. Not yet listed in the map page itself.
 utils/mapper.c
Nicolas Weeger, 2008-02-22

Smarter pic generation for tiled maps. Fix crash if no map for quest.
 utils/mapper.c
Nicolas Weeger, 2008-02-16

Remove obsolete functions (related to weather).
 random_maps/standalone.c
 utils/bwp.c mapper.c
 test/unit/common/stubs_common.c
 test/unit/random_maps/stubs_random.c
 test/unit/socket/stubs_socket.c
Nicolas Weeger, 2008-02-17

Fix shifted pic for eg Titan.
 common/object.c: make get_multi_size() non static so can be used elsewhere.
 include/libproto.h
 utils/mapper.c
Nicolas Weeger, 2008-02-17

Remove ltostr10 and doubletostr10. They were using static buffer, and
are nicely replaced by stringbuffer_append_printf() or snprintf().
 common/loader.l object.c porting.c
 include/libproto.h
 server/time.c
 test/unit/common/check_loader.c
Nicolas Weeger, 2008-02-17

Unit test for get_ob_diff().