@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Implement strerror_local() for systems not having strerror_r().
+  common/porting.c
+Andreas Kirschbaum 2008-03-20
+
 Fix some integer overflows in experience calculations.
   common/exp.c
   common/living.c
